<resources>
    <string name="app_name">Urban Slang</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="search">search</string>
    <string name="favorites">favorites</string>
    <string name="trends">trends</string>
    <string name="cache">cache</string>
    <string name="random">random</string>
    <string name="settings">settings</string>
    <string name="policy_privacy">policy_privacy</string>
    <string name="no_results">no results</string>
    <string name="definitions">definitions</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="privacy_policy">Privacy Policy updated.\nPlease, read the link. Click \"yes\" if you agree with the
        privacy policy and \"no\" otherwise (app only collect data on which the stability of the application depends
        and personalized display of advertising)
    </string>
    <string name="privacy_policy_question">Do you agree with the privacy policy?</string>
    <string name="policy_link">https://github.com/batulovandrey/UrbanSlang/blob/master/privacy_policy.md</string>
    <string name="action_settings">Settings</string>
    <string name="delete_question">List will be cleared. Are you sure?</string>
    <string name="success">Success</string>
</resources>
